Fix some null derefs. Progress towards vertically aligning output fields to make them easier.

--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,7 @@
     width: 40%;
     text-align: left;
 }
+
+.query-form.response {
+    display: table;
+}
